--- a/liberation-through-movement-mentorship.html
+++ b/liberation-through-movement-mentorship.html
@@ -32,82 +32,53 @@ banner:
     benefit: The art of authentic space holding and LTM Facilitator training
 course-description:
   heading: Discover the essence of the LTM Mentorship
-  description_html: <p>Add description here</p>
-  module:
-    - image_path: /uploads/icons/manamei-6.png
-      title: Phase 1, Connection to the Physical Body
-      description_html: <p>Description</p>
-    - image_path: /uploads/icons/manamei-6.png
-      title: Phase 2, Connection to the Emotional Body
-      description_html: <p>Description</p>
-    - image_path: /uploads/icons/manamei-6.png
-      title: Phase 3, Connection to the Transpersonal Body
-      description_html: <p>Description</p>
-    - image_path: /uploads/icons/manamei-6.png
-      title: Phase 4, The art of authentic space holding and LTM Facilitator training
-      description_html: <p>Description</p>
+  description_html: <p>The Liberation Through Movement Mentorship Program is a carefully crafted process by Mana Mei developed over three decades. Rooted in classical dance techniques, somatic movement, and free expressive dance, this program focuses on harmonizing Feminine and Masculine energies within. Throughout the journey, you'll explore and cultivate awareness in your physical, emotional, and transpersonal bodies, gaining tools to maintain peace, express your authentic self, and step into leadership.</p><p>It is based on the process that I have personally gone through in my own life, and continue to use on a daily basis to reach and sustain the expanded state of liberated expression that I embody today.</p><p>Whatever meaningful changes and transformations you are desiring to achieve right now, I am here to support you every step of the way by creating a safe space for you to recollect and liberate all parts of yourself and rise into empowered self expression.</p>
+  background-image: 
+    background_image: /uploads/images/manamei-9.jpg
+    image_focus: 
+    overlay_style: dark
+benefits:
+  heading: By joining the Mentorship, you will
+  description_html: <ul><li>Cultivate awareness & freedom in your physical body.</li><li>Source power from your energy body.</li><li>Maintain peace amidst life's challenges.</li><li>Awaken courage & strength for authentic expression.</li><li>Rise into leadership & create a satisfying, pleasure-filled life.</li><li>Learn to hold space authentically</li></ul>
+  background-image: 
+    background_image: 
+    image_focus: 
+    overlay_style: 
 who-its-for:
   heading: Who the LTM Mentorship is for
-  description_html: Describe the prospective student
+  description_html: This program is for women who seek meaningful changes and transformations, desiring to reclaim freedom in their bodies and express their raw nature while anchoring themselves in stability and direction. If you're drawn to a balanced approach that honors both the Feminine and Masculine, this mentorship is crafted for you.
   background-image:
     background_image: /uploads/images/manamei-5.jpg
     image_focus: center
     overlay_style: light
 inside-the-course:
   heading: Inside the LTM Mentorship
-  description_html: <p>Description of the STRUCTURE of the course goes here.</p>
+  description_html: The 4-month program follows the Liberation Through Movement Model, with each month dedicated to one of the 3 Pillars of Connection, culminating in Authentic Space Holding and LTM Facilitation Training. The journey is a deep exploration of your inner world, combining daily practices, weekly transmissions, and monthly mentoring calls.
   module:
-    - title: 'Phase 1: Fall: The Homecoming: Overview'
-      description_html: >-
-        <ul><li>Phase 1 Overview PDF download</li><li>Pre-Post Pracitce Care PDF
-        download</li></ul>
+    - title: Phase 1 - Connection to the Physical Body
+      description_html: <ul><li>Creating Safety</li><li>Remeeting the Body</li><li>Cultivating Self-Love</li></ul>
       time:
         show: false
-        hours: 1
-        minutes: 16
-    - title: 'Phase 1, Week 1: Safety In My Body'
-      description_html: >-
-        <ul><li>The Daily Dose practice lesson</li><li>Writing
-        exercise</li><li>Practice 1: Coming Home meditation
-        (audio)</li><li>Practice 2: Joint Articulation movement meditation
-        (audio)</li><li>Practice 3: Mana Movement Module
-        (video)</li><li>Practice 4: Somatic Movement: Isolations &amp;
-        Initiations (video)</li><li>Practice 5: Mana Movement Module
-        (video)</li></ul>
+        hours: 
+        minutes:
+    - title: Phase 2 - Connection to the Emotional Body
+      description_html: <ul><li>Emotional Alchemy</li><li>Shadow Expression</li><li>Body as a Manifestation Vessel</li></ul>
       time:
         show: false
-        hours: 1
-        minutes: 16
-    - title: 'Phase 1, Week 2: Accept & Let It Go'
-      description_html: >-
-        <ul><li>The Daily Dose practice: Shaking</li><li>Writing
-        Exercise</li><li>Practice 1: Grounding &amp; Presence Meditation
-        (audio)</li><li>Practice 2: Mana Movement Module
-        (video)</li><li>Practice 3: Somatic Movement: Movement Dynamics
-        (video)</li><li>Practice 4: Embody the Ugly Masterclass
-        (video)</li></ul>
+        hours: 
+        minutes: 
+    - title: Phase 3 - Connection to the Transpersonal Body 
+      description_html: <ul><li>Boundaries</li><li>Radical Authentic Expression</li><li>Becoming the Leader</li></ul>
       time:
         show: false
-        hours: 1
-        minutes: 16
-    - title: 'Phase 1, Week 3: Love & Liberation'
-      description_html: >-
-        <ul><li>Breath In, Expand&nbsp;</li><li>The Daily Dose practice:
-        Gratitude List</li><li>Writing exercise</li><li>Practice 1: Bodyplay
-        movement meditation (audio)</li><li>Practice 2: Mana Movement Module
-        (video)</li><li>Practice 3: Somatic Movements: 5 Levels of Space
-        (video)</li><li>Practice 4: Painting Space movement meditation
-        (audio</li><li>Practice 5: Writing &amp; Embodiment</li></ul>
+        hours: 
+        minutes: 
+    - title: Phase 4 - Authentic Space Holding & LTM Facilitation Training 
+      description_html: <ul><li>Creating LTM Journeys</li><li>The Art of Holding Space</li><li>Practice Teaching & Graduation Experience</li></ul>
       time:
         show: false
-        hours: 1
-        minutes: 16
-    - title: ''
-      description_html: ''
-      time:
-        show: false
-        hours: 0
-        minutes: 0
+        hours: 
+        minutes: 
   background-image:
     background_image: /uploads/backgrounds/manamei-4.jpg
     image_focus: bottom
@@ -218,13 +189,13 @@ seo:
 <!-- Course Heading -->
 {% include hero-banner-course.html %}
 
-<!-- Banner -->
-{% include banner-course.html %}
-
 <!-- Video -->
 
 <!-- Course Description -->
 {% include description-course.html %}
+
+<!-- Course Benefits -->
+{% include benefits-course.html %}
 
 <!-- Who It's For -->
 {% include who-its-for.html %}
