--- a/mana-movement.html
+++ b/mana-movement.html
@@ -164,6 +164,7 @@ investment:
   button: 
     text: Enroll Now
     url: https://manamei.teachable.com/p/mana-movement-sales
+  border: border-y border-feature
 faq:
   heading: Frequently asked questions
   questions-and-answers:
