--- a/liberation-through-movement-mentorship.html
+++ b/liberation-through-movement-mentorship.html
@@ -87,9 +87,9 @@ testimonials:
   overlay_style: light
   testimonials:
     - testimonial: This is a testimonial
-      author: Regina Philange
+      author: — Regina Philange
     - testimonial: This is a testimonial
-      author: Ken Adams
+      author: — Ken Adams
 instructor:
   show: true
 investment:
@@ -97,13 +97,12 @@ investment:
   includes:
     heading: What's included
     list:
-      - list-item: 12 guided audio and video practices
-      - list-item: Written theory and journaling prompts
-      - list-item: Lifetime access to program materials
-      - list-item: Access to the private wisdom body Facebook group
-      - list-item: >-
-          2-months free membership to the liberation through movement online
-          community
+      - list-item: Weekly pre-recorded audio & video practices
+      - list-item: Weekly Live Group Transmissions with Mana Mei
+      - list-item: Monthly Guest Facilitator Experiences
+      - list-item: 1:1 Mentoring calls with Mana Mei and Assistant Mentor
+      - list-item: Access to the exclusive Online Mentorship Haven
+      - list-item: Free lifetime membership to the Liberation Through Movement Online Community
   pricing:
     pay-in-full:
       heading: Pay in full
@@ -115,6 +114,7 @@ investment:
   button: 
     url: 
     text: Apply now
+  border: border-y border-feature
 faq:
   heading: Frequently asked questions
   questions-and-answers:
@@ -170,8 +170,8 @@ faq:
     background_image: /uploads/backgrounds/manamei-3.jpg
     image_focus: bottom right
 cta:
-  heading: A headline
-  description_html: <p>Empowering text</p>
+  heading: Enrollment
+  description_html: <p>Ready to take the next step?</p><p>First, fill out the application included in the email you received. Then, book a 45 minute connection call with Mana Mei (you will be invited to do so once your application has been submitted).</p>
   button:
     text: Apply now
     url:
