--- a/liberation-through-movement-mentorship.html
+++ b/liberation-through-movement-mentorship.html
@@ -17,19 +17,13 @@ heading:
     url:
   background_image: /uploads/images/manamei-24.jpg
   overlay_style: medium
-banner:
-  - image_path:
-    title: Phase 1
-    benefit: Connection to the physical body
-  - image_path:
-    title: Phase 2
-    benefit: Connection to the emotional body
-  - image_path:
-    title: Phase 3
-    benefit: Connection to the transpersonal body
-  - image_path:
-    title: Phase 4
-    benefit: The art of authentic space holding and LTM Facilitator training
+brochure-1: 
+  heading: Download the Mentorship Brochure
+  description_html: Unravel the essence of this unique 4-month journey curated by Mana Mei.
+  background-image: 
+    background_image: 
+    image_focus: 
+    overlay_style: 
 course-description:
   heading: Discover the essence of the LTM Mentorship
   description_html: <p>The Liberation Through Movement Mentorship Program is a carefully crafted process by Mana Mei developed over three decades. Rooted in classical dance techniques, somatic movement, and free expressive dance, this program focuses on harmonizing Feminine and Masculine energies within. Throughout the journey, you'll explore and cultivate awareness in your physical, emotional, and transpersonal bodies, gaining tools to maintain peace, express your authentic self, and step into leadership.</p><p>It is based on the process that I have personally gone through in my own life, and continue to use on a daily basis to reach and sustain the expanded state of liberated expression that I embody today.</p><p>Whatever meaningful changes and transformations you are desiring to achieve right now, I am here to support you every step of the way by creating a safe space for you to recollect and liberate all parts of yourself and rise into empowered self expression.</p>
@@ -179,6 +173,14 @@ cta:
     background_image: /uploads/images/manamei-22.jpg
     background-position: center
     overlay_style: medium
+brochure-2: 
+  heading: Still have questions?
+  description_html: Download the Liberation Through Movement Mentorship brochure to learn more.
+  background-image: 
+      background_image: 
+      image_focus: 
+      overlay_style: 
+  border: border-y border-feature
 seo:
   title:
   description:
@@ -189,7 +191,8 @@ seo:
 <!-- Course Heading -->
 {% include hero-banner-course.html %}
 
-<!-- Video -->
+<!-- Brochure Download -->
+{% include cta-brochure-1.html %}
 
 <!-- Course Description -->
 {% include description-course.html %}
@@ -219,3 +222,6 @@ seo:
 
 <!-- CTA -->
 {% include cta-course.html %}
+
+<!-- Brochure Download -->
+{% include cta-brochure-2.html %}
