--- a/wisdom-body.html
+++ b/wisdom-body.html
@@ -28,8 +28,9 @@ banner:
    title: Awaken
    benefit: Your feminine passion and creativity
 video:
-  show: true
-  url: 
+  video_thumbnail: /uploads/video/wisdom-body-thumbnail.png
+  image_focus: 
+  overlay_style: 
 course-description: 
   heading: Discover the essence of Wisdom Body
   description: This program is a personal deep dive into 12 powerful embodied movement and somatic dance practices - broken down into 4 themed-modules including 3 practices each, Movement Meditation, Somatic Activation, Embodied Liberation
@@ -153,6 +154,7 @@ seo:
 {% include banner-course.html %}
 
 <!-- Video -->
+{% include video.html %}
 
 <!-- Course Description -->
 {% include description-course.html %}
