--- a/liberation-through-movement.html
+++ b/liberation-through-movement.html
@@ -38,8 +38,9 @@ banner:
     title: Offering
     benefit: Become open to receive abundance
 video:
-  show: true
-  url:
+  video_thumbnail: /uploads/video/ltm-thumbnail-1.png
+  image_focus: 
+  overlay_style: 
 course-description:
   heading: Discover Liberation Through Movement
   description_html: >-
@@ -52,9 +53,7 @@ course-description:
 who-its-for:
   heading: Who the Liberation Through Movement is for
   description_html: >-
-    <p>Women who value freedom of expression
-    and the cultivation of embodied feminine power. This tribe was created for
-    you, WELCOME HOME.</p>
+    <p>Liberation Through Movement is designed for women seeking a global community and shared passion. It welcomes those desiring to align with their true nature, joy, and peace through creativity and pleasure. This course is for individuals looking to explore feminine expressions and find support in a community of like-minded women.</p>
   background-image:
     background_image: /uploads/images/manamei-10.jpg
     image_focus: center
@@ -63,17 +62,18 @@ testimonials:
   background_image: /uploads/backgrounds/manamei-4.jpg
   testimonials:
     - testimonial: I am allowing energy to move through me, finding my own medicine, and the power in this sisterhood continually helps me to come home to myself. I am eternally grateful.
-      author: Julie De Lorenzo
+      author: — Julie De Lorenzo
     - testimonial: Before this tribe I rejected a part of myself that longed for sisterhood because I believed that to be impossible. This tribe has showed me just how wrong I was, it has helped me heal the sister wound. And I am so grateful for that.
-      author: Oumayma Rose
+      author: — Oumayma Rose
     - testimonial: With the support from women around the world, this community shows me ways to cope with my pain and to open up to new experiences. It has inspired me to dance alone in my room and to be more expressive, to speak up for myself and to show others that they are heard, understood, and supported.
-      author: Ashley Lynn Clark
+      author: — Ashley Lynn Clark
     - testimonial: This tribe helps me connect more with my intuition and has showed me once more that my Soul-Language is movement & Dance. Being part of a tribe full of women who feel liberated through movement makes my heart sing!
-      author: Aisha Luke
-    - testimonia: Since I met Mana Mei and joined this Tribe, beautiful changes have been happening into and throughout my life... Surrender to the guidance. Find places like this to grow together, bounded by an invisible magic line with people going in the same direction, with love.
-      author: Gloria Da Lio
+      author: — Aisha Luke
+    - testimonial: Since I met Mana Mei and joined this Tribe, beautiful changes have been happening into and throughout my life... Surrender to the guidance. Find places like this to grow together, bounded by an invisible magic line with people going in the same direction, with love.
+      author: — Gloria Da Lio
     - testimonial: This tribe reminds us that we are not alone! And that it’s ok to feel. By embracing our feelings we empower ourselves and others!
-      author: Alex Deville
+      author: — Alex Deville
+  border: border-y border-feature
 about: 
   heading: The story of Mana Mei & Liberation Through Movement
   description_html: In early 2020, the world began shutting down. Borders closed, neighborhoods closed, doors closed, and hearts began closing as people were forced to enter into a time of isolation and separateness… a sense of closeness, intimacy, and community greatly began suffering, and so did many people as they were left alone, stripped of the human connection that is so vital for our health and wellbeing.</p><p>But although this may sound like the start of a tragic story, it is not. Because as is the way of life, as some doors shut, others open. The rise of virtual global communities  began spreading like wildfire as people all over the world also rose up to meet the shifting paradigm. People everywhere began seeking like-minded, like-spirited tribe in every continent, uniting together under common interests and shared passions. And within the flow of this massive global movement to the virtual space, the Liberation Through Movement Tribe was born.</p><p>Mana Mei is an international feminine embodiment facilitator, sacred embodied ritual space creator, and muse of all things dance and movement. Her mission and passion on this Earth walk is to create experiences where women can come together in transformation and growth through the feminine arts. For women to find safety in sisterhood, and permission through collective support to be their most radiant and fully expressed badass creatrix selves.</p><p>And in early 2020, when the global movement to the virtual field ignited, another movement also sparked into existence… the LIBERATION THROUGH MOVEMENT.</p><p>Mana Mei birthed the Liberation Through Movement Tribe as a Facebook Group open to all women interested in dance, movement, embodiment, and global sisterhood. Her desire was to create a space where women could feel connected to other sisters around the world through the universal language of dance and embodiment, and remember that they are not alone. That even during a time of physical separateness, we are here to support one another, hold each other in tenderness through the challenges of life, and continue rising together, celebrating our feminine power, and reconnecting with embodied pleasure and authentic creative expression.</p><p>During 2020, the Liberation Through Movement Tribe grew from just a few hundred women, to over 3,000 women spanning every continent! Within the tribe, women cultivated trust in each other through vulnerable and authentic sharing, they explored different facets of their feminine expression through embodied dance experiences, they leaned into being seen and heard by their sisters, and they co-created a beautiful, thriving global tribe of rising women to inspire, be inspired, support, and be supported, through all of life’s twists and turns.</p><p><strong>For many women, the Liberation Through Movement Tribe BECAME HOME.</strong></p><p>But by the end of 2020, it was becoming very clear to Mana Mei that the Facebook platform was not in alignment with the core values of this tribe. Tribe members were getting their content censored, blocked, and their freedom of expression was stifled. Mana realized that the rules of Facebook went against everything the community stands for. That without FREEDOM OF EXPRESSION, women would never fully thrive the way they deserve. So Mana made the very edgy decision to move the tribe off Facebook and rebirth the community on an independent platform where ownership of the community rested in the hands of Mana Mei and the members of the tribe.</p><p>Mana knew that stepping into this next evolution of Liberation Through Movement would require a deeper commitment to serving her community, and providing women with access to the knowledge and experiences needed to continue rising together in embodied sisterhood. This commitment comes in the  form of consistent offerings-  weekly opportunities for all members of the tribe to dive into new unique classes, workshops, and rituals all centered around feminine embodiment and cultivating creative expression. Through this consistency of showing up with and for each other, we are able to co-create a potent container to give us the strength we need to continue navigating life with grace and aligning ourselves with our highest potential as embodied feminine leaders.</p><p><em>Liberation Through Movement is a place to call home, where we value freedom of expression and the cultivation of embodied feminine power. This tribe was created for you, WELCOME HOME.</em></p>
@@ -203,6 +203,7 @@ seo:
 {% include banner-course.html %}
 
 <!-- Video -->
+{% include video.html %}
 
 <!-- Course Description -->
 {% include description-ltm.html %}
