click to popup video

--- a/wisdom-body.html
+++ b/wisdom-body.html
@@ -14,7 +14,7 @@ heading:
   button-video: 
     show: true
     text: Watch the video
-    url:
+    url: https://res.cloudinary.com/dnb4ey82d/video/upload/v1701101231/manamei/wisdom-body.mp4
   background_image: /uploads/images/manamei-14.jpg
   overlay_style: medium
 banner: 
