video click to popup

--- a/mana-movement-foundations.html
+++ b/mana-movement-foundations.html
@@ -17,7 +17,8 @@ heading:
   button-video:
     show: true
     text: Watch the video
-    url: https://youtu.be/5sEVM981_X0?
+    type: youtube
+    url: https://www.youtube.com/embed/5sEVM981_X0?si=o8-6Hc6L1vNcaW2e
   background_image: /uploads/images/manamei-27.jpg
   overlay_style: medium
 banner:
