--- a/liberation-through-movement.html
+++ b/liberation-through-movement.html
@@ -24,7 +24,7 @@ heading:
   button-video:
     show: true
     text: Watch the video
-    url: https://youtu.be/VOS9H1czAhU?si=mbz84MhvrBivX01-
+    url: https://res.cloudinary.com/dnb4ey82d/video/upload/v1701101442/manamei/ltm_wesx93.mp4
   background_image: /uploads/images/manamei-15.jpg
   overlay_style: medium
 banner:
