--- a/mana-movement-foundations.html
+++ b/mana-movement-foundations.html
@@ -15,7 +15,7 @@ heading:
     url: >-
       https://sso.teachable.com/secure/487916/checkout/4871108/mana-movement-foundations
   button-video:
-    show: true
+    show: false
     text: Watch the video
     type: youtube
     url: https://www.youtube.com/embed/5sEVM981_X0?si=o8-6Hc6L1vNcaW2e
@@ -192,7 +192,7 @@ investment:
   pricing:
     pay-in-full:
       heading: Pay in full
-      price: $20
+      price: $22
     payment-plan:
       show: false
       heading: Payment plan
