Updated 2 files via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@ about-ltm:
     Dance Practices.</p><p>When you dive into the vast world of Liberation
     Through Movement, you are embarking on a life-changing journey into deep
     reconnection with all aspects of your TRUE SELF, remembering who you are,
-    and coming back home to your inner sanctuary of SAFETY & FREEDOM</p><p>It is
-    an all-in-one experience- mindfulness meditation, physical activation, and
-    spiritual liberation.</p><p>It connects the energetic and physical bodies-
-    heightening your inner wisdom and allowing you to meet thus world in full
-    authentic expression</p><p>It awakens your authentic and unique expression
-    by surpassing the language of the mind and accessing deep layers of
-    intuitive knowing.</p><p>Liberation Through Movement HEALS- by way of
-    returning you to your innate wholeness, reclaiming fragmented and forgotten
-    aspects of your Self, and creating a safe container for you to step back
-    into the driver seat of your life.</p><span class="text-sm-serif
-    md:text-md-serif text-feature">Quiet your Mind. Activate your Body. Awaken
-    your Spirit.</span>
+    and coming back home to your inner sanctuary of SAFETY &amp;
+    FREEDOM.</p><p>It is an all-in-one experience: mindfulness meditation,
+    physical activation, and spiritual liberation.</p><p>It connects the
+    energetic and physical bodies, heightening your inner wisdom and allowing
+    you to meet the world in full authentic expression.</p><p>It awakens your
+    authentic and unique expression by surpassing the language of the mind and
+    accessing deep layers of intuitive knowing.</p><p>Liberation Through
+    Movement HEALS — by way of returning you to your innate wholeness,
+    reclaiming fragmented and forgotten aspects of your Self, and creating a
+    safe container for you to step back into the driver's seat of your
+    life.</p><p><span class="text-sm-serif md:text-md-serif text-feature">Quiet
+    your Mind. Activate your Body. Awaken your Spirit.</span></p>
   background_image: /uploads/images/manamei-16.jpg
   overlay_style: dark
 banner-2:
