Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@ about-mana:
   description_html: >-
     <p>Hi, I’m Mana. And I am undeniably obsessed with movement.</p><p>I was
     blessed to find my passion very early in life.</p><p>I first stepped foot in
-    a dance studio at age 3. And from then on, I have continued to step foot
-    onto a dance floor nearly every day of my life.</p><p>Since that fateful day
-    33 years ago, my life journey has been fueled by my absolutely unwavering
+    a dance studio at age 3. And from then on, I have continued to step onto a
+    dance floor nearly every day of my life.</p><p>Since that fateful day 33
+    years ago, my life journey has been fueled by my absolutely unwavering
     obsession with dance.</p><p>But life as a dancer hasn’t always been glory
-    and fame, rainbows and butterflies…</p>
+    and fame, rainbows, and butterflies…</p>
   button: Learn more
   background_image: /uploads/images/manamei-39.jpg
   overlay_style: medium
