--- a/liberation-through-movement-mentorship.html
+++ b/liberation-through-movement-mentorship.html
@@ -9,7 +9,7 @@ heading:
   subtitle: Mentorship & Facilitator Training
   description_html: Short description here.
   button-enroll:
-    text: Apply now
+    text: Join the waitlist
     url:
   button-video:
     show: false
@@ -80,10 +80,20 @@ testimonials:
   background_image: /uploads/images/manamei-2.jpg
   overlay_style: light
   testimonials:
-    - testimonial: This is a testimonial
-      author: — Regina Philange
-    - testimonial: This is a testimonial
-      author: — Ken Adams
+    - testimonial: I am so grateful, so so grateful for you, Mana, for creating this space and the way you are holding it and the way you have created the program. Taking the decision to do this mentorship has been one of the best things I have ever done. Im coming from a place where I was not confident with myself and what I do. I would always question myself with what I say. I would always compare myself to others, because I didn’t like me. I thought I’m not enough. I’m not doing enough, I’m not good enough, I don’t have anything to offer… I wanted to be like someone else…<br class="mb-4">And with this mentorship I really got the chance to get to know myself, and I like what I found. The ability to show up with confidence. And really being confident in believing in myself and my medicine and what I have to offer. I definitely feel more open to show myself in a more authentic way.
+      author: — LTM Mentorship participant, Rodi Sarivan
+    - testimonial: It was life changing, it IS LIFE CHANGING.<br class="mb-4">I came into a sisterhood that truly nourishes me and holds me and gives me the courage to dive deep into parts of myself I was so ashamed of, that I neglected for such a long time. And I could have access to all these parts and put them together into WHOLENESS.<br class="mb-4">I feel much more energized. I feel so much more truly AUTHENTIC.<br class="mb-4">The way I move changed. The way I speak changed. The way I show up in the world changed. I would really recommend it to every woman in this world to jump into this journey. I feel like there is such a new path opening up for me. A path of being TRULY WHO I AM and finding myself and staying true to myself.    
+      author: — Maryam Azou, Liberation Through Movement Mentorship
+    - testimonial: Words can simply not express the amount of gratitude I feel in my Heart right now. Thank you so much, Mana, for creating the Liberation Through Movement Mentorship Program for women. Thank you for sharing your knowledge and wisdom in such a beautiful way. Liberation Through Movement is a safe container for you to explore your Femininity. To discover your authenticity. To feel safe in your vulnerability. To experience sisterhood. To simply be who you truly are. The tools you receive in this container are priceless. Liberation through movement has been the best investment I have ever done for myself.<br class="mb-4">I highly recommend Liberation Through Movement Mentorship program to any woman who is looking to step into her power, who is looking to reconnect to her body, to her Soul, and to her inner wisdom.    
+      author: — Oksana Utkina, Liberation Through Movement Mentorship Graduate
+    - testimonial: I am so thankful that I said yes to the Liberation Through Movement Mentorship because this was saying yes to me.This was the first step for me in showing up for myself and it has been so powerful. IT HAS CHANGED THE WAY I LIVE MY LIFE.<br class="mb-4">I never expected to get as much out of this as I have. I’ve gotten so much from this safe container, from the leadership of Mana, and from the curriculum that she’s created. I am so grateful to Mana’s leadership and the container that she’s created. It’s just dripping with knowable and education. It genius and I urge you to say YES to yourself.
+      author: — Antonia Martinez, Liberation Through Movement Mentorship Graduate
+    - testimonial: I’m so happy and so enchanted by this. And I wish every woman would take place in this celebration of Femininity, of sisterhood, of aliveness. I learned so much about my values in life. About how I am choosing to walk and dance throughout this life. I learned how it is to be safe in my body. How it is to be vulnerable, how it is to be authentic.<br class="mb-4">With the guidance of Mana, I was just shedding layers and uncovering so many part of myself that just wanted to be exposed and to be clear.Give yourself this gift. Choose yourself and join this magnificent, wild Feminine tribe.    
+      author: — Gaia Jagu, Liberation Through Movement Mentorship Graduate
+    - testimonial: I can’t believe what I am capable of! I am able to completely express myself freely and take up space. I just feel more expressive, more free, more fluid. And every day now that’s my practice. To listen to the body, to respond to the body, to let the body move, to be guided by the body. I am eternally grateful that Mana has committed and devoted her time and energy into creating such a potent container for women to connect with who we are, to come home to ourselves. It’s everything.
+      author: — Kaye Taylor, Liberation Through Movement Facilitator
+    - testimonial: It was a remembrance. It truly was me remembering my worth. Remembering who I am underneath all the layers, underneath all; the conditioning, underneath all eh masks. It was me remembering my power.<br class="mb-4">It was me finding my own blueprint in this world. And taking up space- allowing all parts of me to be integrated. I now have the confidence and the skills and the tools to show up in this world as all parts of me.<br class="mb-4">I see the ripple effect it has with my partner and as a mother, and my life. I am forever grateful, because I truly believe that every single person needs to come home to themselves, but also feel confident to actually be seen.    
+      author: — Lisa Falconer , Liberation Through Movement Mentorship Graduate
 instructor:
   show: true
 investment:
@@ -107,8 +117,8 @@ investment:
       price: $800 x 4 months
   button: 
     url: 
-    text: Apply now
-  border: border-y border-feature
+    text: Join the waitlist
+  border: 
 faq:
   heading: Frequently asked questions
   questions-and-answers:
@@ -167,7 +177,7 @@ cta:
   heading: Enrollment
   description_html: <p>Ready to take the next step?</p><p>First, fill out the application included in the email you received. Then, book a 45 minute connection call with Mana Mei (you will be invited to do so once your application has been submitted).</p>
   button:
-    text: Apply now
+    text: Join the waitlist
     url:
   background-image:
     background_image: /uploads/images/manamei-22.jpg
@@ -216,9 +226,6 @@ seo:
 
 <!-- Investment -->
 {% include investment.html %}
-
-<!-- FAQ -->
-{% include faq.html %}
 
 <!-- CTA -->
 {% include cta-course.html %}
