--- a/wisdom-body.html
+++ b/wisdom-body.html
@@ -86,10 +86,14 @@ testimonials:
   background_image: /uploads/images/manamei-18.jpg
   overlay_style: medium
   testimonials: 
-   - testimonial: This is a testimonial
-     author: Regina Philange
-   - testimonial: This is a testimonial
-     author: Ken Adams
+   - testimonial: I am basking in the pleasure of being a woman. Working with Mana Mei was a profound, transformative, deep passage of giving myself permission to stand in my power and take full responsibility for my life. Mana’s work is potent medicine and receiving it is a big gift…This is the path of the Divine Feminine, of us awakening to be whole and complete, and this in the medicine that gives you the opportunity to step into your wholeness.
+     author: Ela Gasiorowska
+   - testimonial: I can say with confidence that this work changed my life. Anything Mana touches is imbued with deep love and reverence for the feminine, and this was no exception. Words are really hard to find to describe this work, this medicine, this ancient wisdom that is ignited within your body when you do this movement.
+     author: 
+   - testimonial: My body feels activated and strong. I am more aware of how I hold my body and how I move in day to day life. I feel more present more often, in deeper communication with my Soul. Life is now more expansive, more abundant in opportunities, my creativity feels like it flipped a switch and now theres a flood of ideas and inspiration. I feel dedicated to myself and creating my life around this passion for creating art with my body and inspiring others to do the same. I feel closer to the possibility of stepping into my leadership with confidence in what I have to offer! I feel more accepting and self loving for all emotional energies that want to be experienced through me, allowing freedom of expression. And i feel empowered in knowing that i always have this temple space within.
+     author: 
+   - testimonial: These rituals of presence and movement allowed me to feel what I had been resisting to feel, to witness the subconscious self sabotaging beliefs and to actively make choices to alchemise them through my movement in these delicious feminine patterns. Through the activations, alot of the ptsd that had been stored in my body and spine had a chance to finally be released.<br class="mb-4">This brought with it, a deep shamanic journey to the depths of the shadows I had collected in this life, along with the karmic and generational wounded energies that I had been holding on to. I learnt what it means to embody it all, the light and the dark, the love and the fear, to become an embodied woman learning to welcome all with loving presence. I met so many fragmanted parts of my being that had been hiding away, some days I felt ecstaticly empowered, basking in liberation, and others days where I felt frozen in resistance to moving or feeling anything at all. Yet having these practices as a constant, and the specific sets of delicious, nourishing movements, linked with the presence of the breath was sooooo healing, where I could just surrender to Mana’s voice and the beautiful was she leads the practices.   
+     author: 
 instructor: 
   show: true
 investment: 
