--- a/wisdom-body.html
+++ b/wisdom-body.html
@@ -105,7 +105,7 @@ faq:
    - question: Will I receive a certificate at the end?
      answer_html: <p>Wisdom Body is purely a personal deep dive experience so there is no certification at completion. If you are interested in Mana Mei’s Level 1 Leadership and Facilitator Training, check out the Liberation Through Movement Mentorship Program!</p>
    - question: I don’t have a credit card. Is there any other way I can pay?
-     answer_html: <p>Yes! We accept PayPal and Bank Transfers. Please contact Mana Mei to request a new payment option.</p>
+     answer_html: <p>If you do not have a Credit Card, you can alternatively pay through PayPal. In order to do this, you will need to send the full amount to paypal.me/manamovement and contact Mana through email or Social Media with your name, email, and which program you have purchased.</p>
   background-image: 
     background_image: /uploads/backgrounds/manamei-3.jpg
     image_focus: bottom right
