--- a/wisdom-body.html
+++ b/wisdom-body.html
@@ -76,7 +76,7 @@ investment:
   includes: 
     heading: What's included
     list: 
-     - list-item: Guided audio and video practices
+     - list-item: 12 guided audio and video practices
      - list-item: Written theory and journaling prompts
      - list-item: Lifetime access to program materials
      - list-item: Access to the private Wisdom Body Facebook group
@@ -101,7 +101,8 @@ faq:
    - question: Are there prerequisites to take this program?
      answer_html: <p>NO. This program is open to any woman who is excited and ready to dive into the movement medicine, regardless of your previous experience. All women can benefit from this program, regardless of your age, physical capacity, dance experience, or location in the world.</p><p>In the case that you are still worried that you do not have enough experience for this program, Mana Mei recommends starting with the MANA Movement Program as a solid starting foundation.</p>
    - question: What is the difference between Wisdom Body and MANA Movement?
-     answer_html: <p>MANA Movement is a guided practice which flows through sequences of specific movement patterns that are focused on bringing non-linear movement into the physical body, otherwise known as the Feminine Pathways or circles, spirals, and waves.</p><p>MANA Movement is a great place to start for those who are completely new to embodied dance and want clear and specific guidance on how to move the body for more freedom.</p><p>Wisdom Body will offer you the next level of freedom in that there is no specific guided movements, but rather invitations for you to discover your unique movement style through intentional prompts, imagery, and somatic cues.</p><p>Wisdom Body is perfect for any woman ready to deepen her movement practice and gain new inspiration for increased freedom.</p>
+     answer_html: <p>MANA Movement is a guided practice which flows through sequences of specific movement patterns that are focused on bringing non-linear movement into the physical body, otherwise known as the Feminine Pathways or circles, spirals, and waves.</p><p>MANA Movement is a great place to start for those who are completely new to embodied dance and want clear and specific guidance on how to move the body for more freedom.</p><p>Wisdom Body will offer you the next level of freedom in that there is no specific guided movements, but rather invitations for you to discover your unique movement style through intentional prompts, imagery, and somatic cues.</p><p class="mb-4">Wisdom Body is perfect for any woman ready to deepen her movement practice and gain new inspiration for increased freedom.</p><div class=”youtube-container”>
+      <div class='embed-container'><iframe src='https://www.youtube.com/embed/HIMIB96xwTY?si=zwu_oWHoCsTHYk1r frameborder='0' allowfullscreen></iframe></div></div>
    - question: Will I receive a certificate at the end?
      answer_html: <p>Wisdom Body is purely a personal deep dive experience so there is no certification at completion. If you are interested in Mana Mei’s Level 1 Leadership and Facilitator Training, check out the Liberation Through Movement Mentorship Program!</p>
    - question: I don’t have a credit card. Is there any other way I can pay?
